fix: wrap error notifications properly Resolves #59

--- a/sass/globals.sass
+++ b/sass/globals.sass
@@ -26,7 +26,7 @@ p.error
     color: var(--primary)
     font-weight: 500
     font-size: 14px !important
-    padding: 7px 10px
+    padding: 7px 11px
     border-radius: 50px
     margin: 0
     margin-left: 5px
@@ -36,6 +36,7 @@ p.error
     left: 50%
     transform: translateX(-50%)
     z-index: 99999999
+    text-align: center
     @keyframes fade
         0%
             opacity: 0
